@@ -10,6 +10,8 @@ Release 1.1.2 Start 13/02/2023 End XX/XX/XXXX
 - 20/02/2023
 04.  tcpserver.c: add additional groups as a comma separated
      groups to -g
+- 08/03/2023
+05.  tcpclient.c: refactored wait handling
 
 * Mon Jan 30 2023 13:14:56 +0000 Manvendra Bhangui <ucspi-tcp@indimail.org> 1.1.1-1.1%{?dist}
 Release 1.1.1 Start 18/09/2022 End 30/01/2023
